Converted Plugin to Class structure. Need to figure out why conditional script loading is not working.

--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     },
     "devDependencies": {
         "grunt": "*",
+        "grunt-autoprefixer": "*",
         "grunt-contrib-watch": "*",
         "grunt-contrib-uglify": "*",
         "grunt-notify": "*",
+        "grunt-sass": "*",
         "matchdep": "*"
     }
 }
